--- a/php-blackjack/css/styles.css
+++ b/php-blackjack/css/styles.css
@@ -1,12 +1,10 @@
-body{
-    background-color: rgb(190, 16, 16);
-}
 
 .container-fluid, .container{
     margin: 2rem auto;
     text-align: center;
 }
 .title{
+    text-align: center;
     font-size: 3rem;
     font-weight: bold;
     color: #333;
@@ -14,10 +12,15 @@ body{
 .btn-primary{
     border-radius: 10px;
     border: 2px solid #fff;
-    margin-right: 2rem;
-    margin-left: 2rem;
+    margin: 1rem auto;
 }
 .btn-secondary{
     border-radius: 10px;
     border: 2px solid #333;
+}
+
+div.col-6.points{
+    background-color: #fff;
+    border: 1px solid black;
+
 }
