--- a/mysql/css/styles.css
+++ b/mysql/css/styles.css
@@ -2,7 +2,7 @@
 	margin: 1rem;
 	font-size: 16px;
 	font-family: monospace;
-	background-color: rgb(181, 238, 181);
+	background-color: rgb(224, 240, 224);
 }
 
 .mainTable {
@@ -22,4 +22,8 @@ thead {
 }
 form {
 	color: blue;
+}
+.formContainer{
+	display: flex;
+	
 }
