--- a/mysql/css/styles.css
+++ b/mysql/css/styles.css
@@ -1,5 +1,4 @@
 * {
-	margin: 1rem;
 	font-size: 16px;
 	font-family: monospace;
 }
@@ -22,6 +21,7 @@ thead {
 th {
 	text-align: center;
 }
-.formContainer {
-	display: flex;
+.container {
+	margin: 0 auto;
+	width: 90vw;
 }
